View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024709 | Open CASCADE | OCCT:WOK | public | 2014-03-11 16:36 | 2015-07-23 17:04 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 6.9.0 | ||
Summary | 0024709: Avoid generation of separate header files for Handle classes | ||||
Description | In order to minimize amount of files in OCCT include folder, it is proposed to avoid generation of Handle_*.hxx files for CDL, generating definition of class and its Handle in the same header file. This will allow to decrease number of header files in include folder by ~ 3.500. Naturally, in some cases when several classes refer to each other it can be feasible to keep definition of the Handle in separate header. This should be made on a case-by-case basis. For examples, see packages LDOM, TObj, OpenGl. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | |||||
Date Modified | Username | Field | Change |
---|---|---|---|
2014-03-11 16:36 |
|
New Issue | |
2014-03-11 16:36 |
|
Assigned To | => kgv |
2014-03-11 16:37 |
|
Relationship added | child of 0024002 |
2014-03-11 16:38 |
|
Relationship added | parent of 0024710 |
2014-03-20 12:09 |
|
Description Updated | |
2014-03-20 12:10 |
|
Relationship added | has duplicate 0024741 |
2015-07-20 14:11 |
|
Status | new => resolved |
2015-07-20 14:11 |
|
Steps to Reproduce Updated | |
2015-07-20 14:23 | kgv | Assigned To | kgv => bugmaster |
2015-07-20 14:23 | kgv | Status | resolved => reviewed |
2015-07-23 17:04 | bugmaster | Status | reviewed => closed |
2015-07-23 17:04 | bugmaster | Resolution | open => fixed |
2015-07-23 17:04 | bugmaster | Fixed in Version | => 6.9.0 |