0024709: Avoid generation of separate header files for Handle classes

CPPExt - do not generate and do not include Handle_Class.hxx files
when environment variable $CSF_HANDLEHXX is set to 0.