src/CPPExt/CPPExt_Transient.cxx
@@ -378,7 +378,10 @@ void CPP_TransientClass(const Handle(MS_MetaSchema)& aMeta,
         continue;
       }
 
-      ///aName = CPP_WithoutHandleSuffix (aName);
+      if (!CPP_HaveHandleHeaders())
+      {
+        aName = CPP_WithoutHandleSuffix (aName);
+      }
       api->AddVariable (VIClass, aName->ToCString());
       api->Apply (VTICIncludes, "Include");
       publics->AssignCat (api->GetVariableValue (VTICIncludes));
@@ -394,7 +397,7 @@ void CPP_TransientClass(const Handle(MS_MetaSchema)& aMeta,
 
     api->AddVariable(VTICIncludes,publics->ToCString());
 
-    api->Apply(VoutClass,"TransientInstClass");
+    api->Apply (VoutClass, CPP_HaveHandleHeaders() ? "TransientInstClass_HandleHxx" : "TransientInstClass");
     
     // we write the .hxx of this class
     //
